[package]
name = "phash_rs"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phash_rs"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
libc = "^0.2.0"
async-std = "^1.9.0"
nshare = {version = "^0.7.0", features = ["image", "ndarray"]}
image = "^0.23.0"
rustdct = "^0.6.0"
ndarray = "^0.15.0"
num-traits = "^0.2.14"
bitvec = "0.22.3"
